--- a/src/Fable.Date.fsproj
+++ b/src/Fable.Date.fsproj
@@ -14,6 +14,6 @@
     <Content Include="*.fsproj; *.fs" PackagePath="fable\" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Fable.Core" Version="2.0.2" />
+    <PackageReference Include="Fable.Core" Version="3.0.0-beta-005" />
   </ItemGroup>
 </Project>
